--- a/HoriMoon/HoriMoon.vcxproj
+++ b/HoriMoon/HoriMoon.vcxproj
@@ -77,6 +77,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)winmm.lib;dxguid.lib;dinput8.lib;ddraw.lib;dsound.lib;d3d10.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -118,6 +119,25 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Bitmap.cpp" />
+    <ClCompile Include="DSUTIL.cpp" />
+    <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="InGameMain1.cpp" />
+    <ClCompile Include="InitDirectX.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MainScreen.cpp" />
+    <ClCompile Include="Random.cpp" />
+    <ClCompile Include="Sprite.cpp" />
+    <ClCompile Include="Timer.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Bitmap.h" />
+    <ClInclude Include="Define.h" />
+    <ClInclude Include="DSUTIL.h" />
+    <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Random.h" />
+    <ClInclude Include="Sprite.h" />
+    <ClInclude Include="Timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
